fixed low contrast on nav li

--- a/lesson4/css/medium.css
+++ b/lesson4/css/medium.css
@@ -12,6 +12,7 @@
   .navmenu a {
     background-color: var(--teal);
     text-align: center;
+    font-weight: bolder;
   }
   .header {
     display: grid;
